# ticket_engine

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: parse_merchant.cpp.A640BE1FF4C3FC09.idx  parse_merchant.hpp.E2804A596683B321.idx  signals.cpp.634D9A4909C20902.idx  signals.hpp.24CE85CE3D5A99C2.idx  test_engine.cpp.32E9359A4D75E7D0.idx  test_engine_real_receipt.cpp.F64C43BA2067FF69.idx  test_normalize.cpp.A4F04BA714761CF0.idx  test_parse_merchant.cpp.D8810835C42D811B.idx  test_parse_total.cpp.2C508FFD23386862.idx  test_signals.cpp.4EFDA56EE1BCACAB.idx
include/tv/: cli.hpp  engine.hpp  json.hpp  model.hpp  normalize.hpp  parse_merchant.hpp  parse_total.hpp  signals.hpp  version.hpp
scripts/: smoke.sh  smoke_cli.sh  smoke_contract.sh
src/: cli.cpp  engine.cpp  json.cpp  main.cpp  normalize.cpp  parse_merchant.cpp  parse_total.cpp  signals.cpp  version.cpp
tests/: CmakeLists.txt  test_engine.cpp  test_engine_real_receipt.cpp  test_normalize.cpp  test_parse_merchant.cpp  test_parse_total.cpp  test_signals.cpp
tests/fixtures/: receipt_real_001.txt
